# BatchingRPCServer

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build_env.sh
BatchingServer/: CMakeLists.txt
BatchingServer/Servable/: Servable.hpp
BatchingServer/Servable/ArrayfireServable/: CMakeLists.txt
BatchingServer/Servable/MXNetServable/: CMakeLists.txt
BatchingServer/Servable/MXNetServable/include/: MXNetServable.hpp
BatchingServer/Servable/MXNetServable/src/: MXNetServable.cpp
BatchingServer/Servable/MXNetServable/test/: TestMXNetServable.cpp
BatchingServer/include/: TensorBatchingServer.hpp
BatchingServer/src/: TensorBatchingServer.cpp
Servable/: CMakeLists.txt  Servable.hpp
Servable/ArrayfireServable/: CMakeLists.txt
Servable/DlibServable/: CMakeLists.txt
Servable/DlibServable/include/: DlibServable.hpp
Servable/DlibServable/test/: TestDlibServable.cpp
Servable/MXNetServable/: CMakeLists.txt
Servable/MXNetServable/include/: MXNetServable.hpp
Servable/MXNetServable/src/: MXNetServable.cpp
Servable/MXNetServable/test/: TestMXNetServable.cpp
Server/: CMakeLists.txt
Server/include/: TBServer.hpp  TensorBatchingServer.hpp
Server/src/: TBServer.cpp  TensorBatchingServer.cpp
Server/test/: TestTBServer.cpp  TestTensorBatchingServer.cpp
buildenv/: Dockerfile
cmake/: AddDlib.cmake  AddGTest.cmake  FindGRPC.cmake  FindMXNet.cmake  FindNVVM.cmake  FindUUID.cmake  dlib.cfg  gtest.cfg
docs/: Doxyfile  _m_x_net_servable_8cpp_source.html  _m_x_net_servable_8hpp_source.html  _r_e_a_d_m_e_8md_source.html  _servable_8hpp_source.html  _t_b_server_8cpp_source.html  _t_b_server_8hpp_source.html  _test_integration_8cpp_source.html  _test_m_x_net_servable_8cpp_source.html  _test_t_b_server_8cpp_source.html  annotated.html  class_serving_1_1_m_x_net_servable-members.html  class_serving_1_1_m_x_net_servable.html  class_serving_1_1_servable-members.html  class_serving_1_1_servable.html  class_serving_1_1_t_b_server-members.html  class_serving_1_1_t_b_server.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_1a445cb237d74f7a5f8d11ec3b0585cc.html  dir_1b7dd5e85b1491356c17f0353c28a9eb.html  dir_30ff900869959b17197a70705703ad2d.html  dir_725eb1998bea45ce699d43c383bdd403.html  dir_7a98f14d8b80101dc9a68736cec215d4.html  dir_94f00c4afbe243f5fef111eda54204bd.html  dir_9a955072435b66b4a437e68ec4e7f669.html  dir_d750d91809ed501bc2d0975dc26f6902.html  dir_e21a975877c3b6a07268dea683df1add.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  md___users__aman_code__batching_r_p_c_server__r_e_a_d_m_e.html  menudata.js  namespace_serving.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespaces.html  (+7 more)
docs/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  functions_0.js  functions_1.js  functions_5.js  functions_6.js  namespaces_0.js  pages_0.js  searchdata.js
proto/: BatchingRPC.proto  TensorMessage.proto
test/: TestIntegration.cpp  TestIntegrationDlib.cpp  TestIntegrationMXNet.cpp  Testintegration.cpp
